# RustFoundryOS

./: .editorconfig  .gitignore  Cargo.toml  Makefile  README.md
.cargo/: config.toml
bootloader/: Cargo.toml  build.rs
bootloader/asm/aarch64/: entry.S
bootloader/asm/x86_64/: bootsector.asm  entry.asm  protected_mode.asm
bootloader/src/: main.rs
cargo/: config.toml
kernel/: Cargo.toml
kernel/src/: lib.rs
scripts/: setup_env.sh
scripts/lint/: check_license_header.sh  check_newline_eof.sh  check_tabs.sh
scripts/lint/license_headers/: header_hash.txt  header_semicolon.txt  header_slash.txt
