# ===============================================================================
# RustFoundry OS:
# Developer-first OS built in Rust, including console-only "Bare Metal Edition".
# Copyright (C) 2025 XalorTech
# License: GPLv3 (see LICENSE.md for details)
# ===============================================================================

[workspace]
resolver = "3"
members = [
	"bootloader",
	"kernel",
]

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
