# ===============================================================================
# RustFoundry OS:
# Developer-first OS built in Rust, including console-only "Bare Metal Edition".
# Copyright (C) 2025 XalorTech
# License: GPLv3 (see LICENSE.md for details)
# ===============================================================================

[package]
name = "kernel"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["rlib"]
